# bsmattacker

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
benchmark/: __init__.py  detectors.py  injection_engine.py  plausibility_check.py  run_benchmark.py  segment_utils.py
benchmark/configs/: benchmark.yaml
bsm_attacker/: README.md  __init__.py  base.py  constant_acceleration.py  constant_heading.py  constant_heading_offset.py  constant_position.py  constant_position_offset.py  constant_speed.py  constant_speed_offset.py  data_replay.py  eventual_stop.py  false_deceleration_cruising.py  false_yield_at_intersection.py  geo_constants.py  ghost_vehicle.py  heading_lock.py  lateral_drift_at_turning.py  noise_model.py  opposite_heading.py  perpendicular_heading.py  phantom_acceleration.py  pipeline.py  position_pullthrough_at_stop.py  random_acceleration.py  random_acceleration_offset.py  random_heading.py  random_heading_offset.py  random_position.py  random_position_offset.py  random_speed.py  random_speed_offset.py  slow_position_drift.py  speed_limit_violation.py
examples/: sample_trace.csv  smoke_test.py
safety_replay/: __init__.py  event_parser.py  metrics.py  replay.py
safety_replay/configs/: replay.yaml
tests/: test_inject.py
